c12: vollständige Customer-Implementierung mit Javadoc